test/valid/for.js
var z = 0;
var i = 0;
for (i = 2; false; i = 3) {
    z = i;
}
