test/invalid/for-2.js
var z = 0;
for (i = 2; i; i = 3) {
    z = i;
}
